--- a/app/test/build.gradle
+++ b/app/test/build.gradle
@@ -1,14 +1,14 @@
 plugins {
-    id 'com.android.application'
+  //  id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'com.didi.drouter'
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.sunzw.codelibrary"
+ //       applicationId "com.sunzw.test"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -41,12 +41,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    api "io.github.didi:drouter-api:2.3.0"
     implementation project(':common')
-    implementation project(':app:test')
 }
