组件化1.0版本

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,5 @@ rootProject.name = "Code Library"
 include ':app'
 include ':common'
 include ':app:test'
+include ':app:codekotlin'
+include ':app:codejava'
