--- a/app/codejava/build.gradle
+++ b/app/codejava/build.gradle
@@ -7,10 +7,10 @@ apply from: '../../base.gradle'
 
 
 android {
-    namespace 'com.szw.test'
+    namespace 'com.szw.codejava'
     defaultConfig {
         if (singleModule.toBoolean()) {
-            applicationId "com.szw.test"
+            applicationId "com.szw.codejava"
         }
     }
     sourceSets {
@@ -28,15 +28,8 @@ android {
 }
 
 dependencies {
-//    implementation 'androidx.core:core-ktx:1.7.0'
-//    implementation 'androidx.appcompat:appcompat:1.3.0'
-//    implementation 'com.google.android.material:material:1.4.0'
-//    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-//    testImplementation 'junit:junit:4.13.2'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-//
-//    api "io.github.didi:drouter-api:2.3.0"
-//    implementation project(':common')
-//
+
 }
+
+
+
