--- a/app/codekotlin/build.gradle
+++ b/app/codekotlin/build.gradle
@@ -4,13 +4,14 @@ if (!singleModule.toBoolean()) {
     apply plugin: 'com.android.application'
 }
 apply from: '../../base.gradle'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 
 android {
-    namespace 'com.szw.test'
+    namespace 'com.szw.codekotlin'
     defaultConfig {
         if (singleModule.toBoolean()) {
-            applicationId "com.szw.test"
+            applicationId "com.szw.codekotlin"
         }
     }
     sourceSets {
@@ -28,15 +29,9 @@ android {
 }
 
 dependencies {
-//    implementation 'androidx.core:core-ktx:1.7.0'
-//    implementation 'androidx.appcompat:appcompat:1.3.0'
-//    implementation 'com.google.android.material:material:1.4.0'
-//    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-//    testImplementation 'junit:junit:4.13.2'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-//
-//    api "io.github.didi:drouter-api:2.3.0"
-//    implementation project(':common')
-//
+
+implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 }
+
+
